--- a/Client/src/app/member/member-auth/member-auth-login/member-auth-login.component.html
+++ b/Client/src/app/member/member-auth/member-auth-login/member-auth-login.component.html
@@ -25,7 +25,7 @@
                 </button>
             </div>
         </div>
-        <a routerLink="/auth/forgot" class="btn btn-link text-white btn-block text-center mt-3">
+        <a href="javascript:void(0)" class="btn btn-link text-white btn-block text-center mt-3">
             Quên Mật Khẩu?
         </a>
     </form>
