--- a/Client/src/assets/css/style.css
+++ b/Client/src/assets/css/style.css
@@ -1487,6 +1487,10 @@ a:hover {
     color: #666666;
     margin: 0;
     font-size: 14px;
+    width: 90%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .theme-dark .media .media-body p {
     color: rgba(255, 255, 255, 0.6);
